# mcp-ladisales

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server.py
api/common/: common.py
api/customers/: customers.py
api/discounts/: discounts.py
api/location/: location.py
api/products/: products.py
