[project]
name = "mcp-ladisales"
version = "0.1.0"
description = "LaDiSales API integration with SSE support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.11.0",
    "requests>=2.31.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "aiohttp>=3.9.0",
    "python-dotenv"
]
